--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,55 +8,58 @@ sidebar:
 
     # Profile information
     name: Jianqiang ZHOU
-    tagline: Data Scientist 
-    avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+    tagline: Entry-Level Data Scientist 
+    avatar: sky-cv-photojpg.jpg #profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: hello@webjeda.com
-    phone: 012 345 6789
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    github: sharu725
-    gitlab:
-    bitbucket:
-    twitter: '@webjeda'
-    stack-overflow: # Number/Username, e.g. 123456/alandoe
-    codewars:
-    goodreads: # Number-Username, e.g. 123456-alandoe
+    email: jqzhou.polytechnique@gmail.com
+    phone: +33(0)785495109 
+    #website: blog.webjeda.com #do not add http://
+    #linkedin: alandoe
+    github: mxz2013  #sharu725
+    #gitlab:
+    #bitbucket:
+            #twitter: '@webjeda'
+            #stack-overflow: # Number/Username, e.g. 123456/alandoe
+            # codewars:
+            #goodreads: # Number-Username, e.g. 123456-alandoe
 
     languages:
-      - idiom: English
+      - idiom: Chinese 
         level: Native
 
-      - idiom: French
+      - idiom: English
         level: Professional
 
       - idiom: Spanish
-        level: Professional
+        level: Beginner 
 
     interests:
       - item: Climbing
         link:
 
-      - item: Snowboarding
+      - item: Computer games
         link:
 
-      - item: Cooking
+      - item: Travel
         link:
 
 career-profile:
     title: Career Profile
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      Physicist with excellent problem-solving and data analysis skills, 
+      who takes pride in applying algorithms to solve real-world business problems.
+
+      #Summarise your career here lorem ipsum dolor sit amet, consectetuer
+      #adipiscing elit. You can [download this free resume/CV template here]().
+      #Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
+      #penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+      #Donec quam felis, ultricies nec, pellentesque eu.
+      #Second paragraph if required.
 education:
-    - degree: MSc in Computer Science
-      university: University of London
-      time: 2011 - 2012
+    - degree: Ph.D. in Theoretical Physics 
+      university: École Polytechnique
+      time: 2013 - 2016
       details: |
         Describe your study here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
@@ -65,9 +68,10 @@ education:
         pretium quis, sem.
           - Bullet point
           - Bullet point
-    - degree: BSc in Applied Mathematics
-      university: Bristol University
-      time: 2007 - 2011
+    - degree: M.Sc. in Master of Molecular Nano- and Biophotonics for 
+      telecommunications and biotechnologies (MONABIPHOT) 
+      university: École Normale Supérieure de Cachan
+      time: 2010 - 2012
       details: |
         Describe your study here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
@@ -76,6 +80,10 @@ education:
         pretium quis, sem.
           - Bullet point
           - Bullet point
+
+    - degree: B.Sc. in Optoelectronic Engineering 
+      university: Harbin institute of technology (China)
+      time: 2005 - 2009
 experiences:
     - role: Lead Developer
       time: 2015 - Present
