--- a/_data/data.yml
+++ b/_data/data.yml
@@ -68,8 +68,7 @@ education:
         pretium quis, sem.
           - Bullet point
           - Bullet point
-    - degree: M.Sc. in Master of Molecular Nano- and Biophotonics for 
-      telecommunications and biotechnologies (MONABIPHOT) 
+    - degree: M.Sc. in Master of Biophotonics 
       university: École Normale Supérieure de Cachan
       time: 2010 - 2012
       details: |
