--- a/_data/data.yml
+++ b/_data/data.yml
@@ -12,7 +12,7 @@ sidebar:
     avatar: sky-cv-photojpg.jpg #profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: jqzhou.polytechnique@gmail.com
+    email: jqzhou_hit@hotmail.com 
     phone: +33(0)785495109 
     #website: blog.webjeda.com #do not add http://
     #linkedin: alandoe
