--- a/_data/data.yml
+++ b/_data/data.yml
@@ -55,11 +55,7 @@ education:
       university: École Polytechnique
       time: 2013 - 2016
       details: |
-      Supervisor Lucia Reining
-      Thesis title Theory of electron spectroscopy beyond the state-of-the-art: 
-           an improved description of fermion-plasmon coupling in Green’s function calculations.
-           #See more details at <a href="https://etsf.polytechnique.fr/node/3404.">benchmarks</a>
-              #Add description of the phd project later...
+              ## add details later
           - Bullet Led multiple joint projects producing several top-tier peer-reviewd publications;
           - Bullet Participated 10 international conferences with 7 oral presentations and 3 posters
                    (one best poster prize);
