--- a/_data/data.yml
+++ b/_data/data.yml
@@ -55,7 +55,7 @@ education:
       university: École Polytechnique
       time: 2013 - 2016
       details: |
-              ## add details later
+               add details later
           - Bullet Led multiple joint projects producing several top-tier peer-reviewd publications;
           - Bullet Participated 10 international conferences with 7 oral presentations and 3 posters
                    (one best poster prize);
@@ -64,7 +64,7 @@ education:
       university: École Normale Supérieure de Cachan
       time: 2010 - 2012
       details: |
-              # Add description later
+               Add description later
           - Bullet Won the Erasmus Mundus Scholarship 48K e for a two-year study in Europe); 
           - Bullet Acquired a multidisciplinary training in physics, chemistry, and biology. 
 
