--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,11 +8,11 @@ sidebar:
 
     # Profile information
     name: Jianqiang ZHOU
-    tagline: Ph.D., Entry-Level Data Scientist 
+    tagline: Entry-Level Data Scientist 
     avatar: sky-cv-photojpg.jpg #profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: jqzhou.polytechnique@gmail.com  #jqzhou_hit@hotmail.com 
+    email: jqzhou_hit@hotmail.com 
     phone: +33(0)785495109 
     #website: blog.webjeda.com #do not add http://
     #linkedin: alandoe
@@ -50,43 +50,76 @@ career-profile:
       Physicist with excellent problem-solving and data analysis skills, 
       who takes pride in applying algorithms to solve real-world business problems.
 
+      ## #Summarise your career here lorem ipsum dolor sit amet, consectetuer
+      ## #adipiscing elit. You can [download this free resume/CV template here]().
+      ###Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
+      ###penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+      ##Donec quam felis, ultricies nec, pellentesque eu.
+      ##Second paragraph if required.
 education:
     - degree: Ph.D. in Theoretical Physics 
       university: École Polytechnique
       time: 2013 - 2016
       details: |
-               add details later
-          - Bullet Led multiple joint projects producing several top-tier peer-reviewd publications;
-          - Bullet Participated 10 international conferences with 7 oral presentations and 3 posters
-                   (one best poster prize);
-          - Bullet Co-organized the 12th ETSF Young Researchers’ Meeting in Paris (+70 participants worldwide).         
+        Describe your study here lorem ipsum dolor sit amet, consectetuer
+        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
+        sociis natoque penatibus et magnis dis parturient montes, nascetur
+        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
+        pretium quis, sem.
+          - Bullet point
+          - Bullet point
     - degree: M.Sc. in Molecular Nano and Biophotonics for telecommunications and biotechnologies (MONABIPHOT) 
       university: École Normale Supérieure de Cachan
       time: 2010 - 2012
       details: |
-               Add description later
-          - Bullet Won the Erasmus Mundus Scholarship 48K e for a two-year study in Europe); 
-          - Bullet Acquired a multidisciplinary training in physics, chemistry, and biology. 
+        Describe your study here lorem ipsum dolor sit amet, consectetuer
+        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
+        sociis natoque penatibus et magnis dis parturient montes, nascetur
+        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
+        pretium quis, sem.
+          - Bullet point
+          - Bullet point
 
     - degree: B.Sc. in Optoelectronic Engineering 
       university: Harbin institute of technology (China)
       time: 2005 - 2009
 experiences:
-    - role: Post-doctoral Fellow 
-      time: 2018 - Present
-      company: Institut des Nanosciences de Paris, Sorbonne Université.
+    - role: Lead Developer
+      time: 2015 - Present
+      company: Startup Hubs, San Francisco
       details: |
-              Scientific computing and analysis of low-dimensional materials.
-          - Bullet Applied a machine-learning type approach to computing scientific concepts. 
-    - role: Post-doctoral Fellow 
-      time: 2016 - 2018
-      company: Laboratoire des Solides Irradiés, École Polytechnique. 
+        Describe your role here lorem ipsum dolor sit amet, consectetuer
+        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+        Cum sociis natoque penatibus et magnis dis parturient montes,
+        nascetur ridiculus mus. Donec quam felis, ultricies nec,
+        pellentesque eu, pretium quis, sem. Nulla consequat massa quis
+        enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
+        error sit voluptatem accusantium doloremque laudantium, totam rem
+        aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+        architecto beatae vitae dicta sunt explicabo.
+          - Bullet point
+          - Bullet point
+    - role: Senior Software Engineer
+      time: 2014 - 2015
+      company: Google, London
       details: |
-              Making strategies to confirm my theoretical predications from my thesis,
-              and writing articles related to Ph.D. project.
-          - Bullet Developed mathematical methods and implemented them in a
-            software (in Python) for bleeding-edge numerical simulations, leading
-            to several top-tier peer-review publications.  
+        Describe your role here lorem ipsum dolor sit amet, consectetuer
+        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+        Cum sociis natoque penatibus et magnis dis parturient montes,
+        nascetur ridiculus mus. Donec quam felis, ultricies nec,
+        pellentesque eu, pretium quis, sem.
+          - Bullet point
+          - Bullet point
+    - role: UI Developer
+      time: 2012 - 2014
+      company: Amazon, London
+      details: |
+        Describe your role here lorem ipsum dolor sit amet, consectetuer
+        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+        Cum sociis natoque penatibus et magnis dis parturient montes,
+        nascetur ridiculus mus. Donec quam felis, ultricies nec,
+        pellentesque eu, pretium quis, sem.
+          - Bullet point
           - Bullet point
 projects:
     title: Projects
