--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,7 +8,7 @@ sidebar:
 
     # Profile information
     name: Jianqiang ZHOU
-    tagline: Entry-Level Data Scientist 
+    tagline: Ph.D., Entry-Level Data Scientist 
     avatar: sky-cv-photojpg.jpg #profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
