--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,8 +7,8 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Jianqiang ZHOU
-    tagline: Ph.D., Entry-Level Data Scientist 
+    name: Jianqiang Sky ZHOU
+    tagline: Ph.D., Data Scientist 
     avatar: sky-cv-photojpg.jpg #profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
@@ -59,8 +59,7 @@ education:
         sociis natoque penatibus et magnis dis parturient montes, nascetur
         ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
         pretium quis, sem.
-          - Bullet Led multiple joint projects producing several top-tier peer-reviewd publications;
-          - Bullet point
+          -  Led multiple joint projects producing several top-tier peer-reviewd publications;
     - degree: M.Sc. in Molecular Nano and Biophotonics for telecommunications and biotechnologies (MONABIPHOT) 
       university: École Normale Supérieure de Cachan
       time: 2010 - 2012
