--- a/_data/data.yml
+++ b/_data/data.yml
@@ -76,42 +76,21 @@ education:
       university: Harbin institute of technology (China)
       time: 2005 - 2009
 experiences:
-    - role: Lead Developer
-      time: 2015 - Present
-      company: Startup Hubs, San Francisco
+    - role: Post-doctoral Fellow 
+      time: 2018 - Present
+      company: Institut des Nanosciences de Paris, Sorbonne Université.
       details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-        enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-        error sit voluptatem accusantium doloremque laudantium, totam rem
-        aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-        architecto beatae vitae dicta sunt explicabo.
-          - Bullet point
-          - Bullet point
-    - role: Senior Software Engineer
-      time: 2014 - 2015
-      company: Google, London
+              Scientific computing and analysis of low-dimensional materials.
+          - Bullet Applied a machine-learning type approach to computing scientific concepts. 
+    - role: Post-doctoral Fellow 
+      time: 2016 - 2018
+      company: Laboratoire des Solides Irradiés, École Polytechnique. 
       details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
-          - Bullet point
-          - Bullet point
-    - role: UI Developer
-      time: 2012 - 2014
-      company: Amazon, London
-      details: |
-        Describe your role here lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum sociis natoque penatibus et magnis dis parturient montes,
-        nascetur ridiculus mus. Donec quam felis, ultricies nec,
-        pellentesque eu, pretium quis, sem.
-          - Bullet point
+              Making strategies to confirm my theoretical predications from my thesis,
+              and writing articles related to Ph.D. project.
+          - Bullet Developed mathematical methods and implemented them in a
+            software (in Python) for bleeding-edge numerical simulations, leading
+            to several top-tier peer-review publications.  
           - Bullet point
 projects:
     title: Projects
