--- a/_data/data.yml
+++ b/_data/data.yml
@@ -81,14 +81,15 @@ experiences:
       company: Institut des Nanosciences de Paris, Sorbonne Université.
       details: |
               Scientific computing and analysis of low-dimensional materials.
-          - Bullet Applied a machine-learning type approach to computing scientific concepts. 
+
+          - Bullet point Applied a machine-learning type approach to computing scientific concepts. 
     - role: Post-doctoral Fellow 
       time: 2016 - 2018
       company: Laboratoire des Solides Irradiés, École Polytechnique. 
       details: |
               Making strategies to confirm my theoretical predications from my thesis,
               and writing articles related to Ph.D. project.
-          - Bullet Developed mathematical methods and implemented them in a
+          - Bullet point Developed mathematical methods and implemented them in a
             software (in Python) for bleeding-edge numerical simulations, leading
             to several top-tier peer-review publications.  
           - Bullet point
