--- a/_data/data.yml
+++ b/_data/data.yml
@@ -78,8 +78,10 @@ education:
 experiences:
     - role: Post-doctoral Fellow 
       time: 2018 - Present
-      company: Institut des Nanosciences de Paris
+      company: Sorbonne Université 
       details: |
+              Scientific computing and analysis of low-dimensional materials.
+          -  Applied a machine-learning type approach to computing scientific concepts. 
 
 projects:
     title: Projects
