--- a/_data/data.yml
+++ b/_data/data.yml
@@ -82,7 +82,7 @@ experiences:
       details: |
               Scientific computing and analysis of low-dimensional materials.
 
-    - Bullet point: Applied a machine-learning type approach to computing scientific concepts. 
+    - Bullet point Applied a machine-learning type approach to computing scientific concepts. 
 projects:
     title: Projects
     intro: >
