--- a/_data/data.yml
+++ b/_data/data.yml
@@ -87,7 +87,7 @@ projects:
       You can list your side projects or open source libraries in this
       section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
       Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
-    assignments 
+    assignments: 
       - title: Velocity
         link: "#hook"
         tagline: "A responsive website template designed to help startups promote, market and sell their products."
