--- a/_data/data.yml
+++ b/_data/data.yml
@@ -78,10 +78,10 @@ education:
 experiences:
     - role: Post-doctoral Fellow 
       time: 2018 - Present
-      company: Sorbonne Université 
+      company: Institut des Nanosciences de Paris Sorbonne Université 
       details: |
              Scientific computing and analysis of low-dimensional materials.
-              - Bullet point
+              - Bullet Applied a machine-learning type approach to computing scientific concepts.
 projects:
     title: Projects
     intro: >
