--- a/_data/data.yml
+++ b/_data/data.yml
@@ -82,9 +82,10 @@ experiences:
       details: |
              Scientific computing and analysis of low-dimensional materials.
               - Applied a machine-learning type approach to computing scientific concepts.
+
     - role: Post-doctoral Fellow 
       time: 2016 - 2018
-      company: Laboratoire des Solides Irradiés École Polytechnique. 
+      company: Laboratoire des Solides Irradiés École Polytechnique 
       details: |
               Making strategies to confirm my theoretical predications from my thesis,
               and writing articles related to Ph.D. project.
