--- a/_data/data.yml
+++ b/_data/data.yml
@@ -83,14 +83,7 @@ experiences:
              Scientific computing and analysis of low-dimensional materials.
               - Applied a machine-learning type approach to computing scientific concepts.
     - role: Post-doctoral Fellow 
-      time: 2016 - 2018
-      company: Laboratoire des Solides Irradiés École Polytechnique 
-      details: |
-              Making strategies to confirm my theoretical predications from my thesis,
-              and writing articles related to Ph.D. project.
-          - Developed mathematical methods and implemented them in a
-            software (in Python) for bleeding-edge numerical simulations, leading
-            to several top-tier peer-review publications.  
+      time: 2018 - Present
 projects:
     title: Projects
     intro: >
