--- a/_data/data.yml
+++ b/_data/data.yml
@@ -83,7 +83,11 @@ experiences:
              Scientific computing and analysis of low-dimensional materials.
               - Applied a machine-learning type approach to computing scientific concepts.
     - role: Post-doctoral Fellow 
-      time: 2018 - Present
+      time: 2016 - 2018
+      details: |
+              Making strategies to confirm my theoretical predications from my thesis, and writing articles related to Ph.D. project.
+              - Applied a machine-learning type approach to computing scientific concepts.
+
 projects:
     title: Projects
     intro: >
