--- a/_data/data.yml
+++ b/_data/data.yml
@@ -86,7 +86,7 @@ experiences:
       time: 2016 - 2018
       details: |
               Making strategies to confirm my theoretical predications from my thesis, and writing articles related to Ph.D. project.
-              - Applied a machine-learning type approach to computing scientific concepts.
+              - Developed mathematical methods and implemented them in a software (in Python) for bleeding-edge numerical simulations, leading to several top-tier peer-review publications.
 
 projects:
     title: Projects
