--- a/_data/data.yml
+++ b/_data/data.yml
@@ -88,8 +88,7 @@ experiences:
               Making strategies to confirm my theoretical predications from my thesis, and writing articles related to Ph.D. project.
               - Developed mathematical methods and implemented them in a software (in Python) for bleeding-edge numerical simulations, leading to several top-tier peer-review publications.
               - Proposed a bleeding-edge experiment to confirm my theoretical predictions, with collaborations of researchers from different domains, and countries.
-              - Organized ETSF correlation team meeting at École Polytechnique,
-France (+30 participants worldwide)
+              - Organized ETSF correlation team meeting at École Polytechnique, France (+30 participants worldwide)
               - Received 3 invited seminars on my researching projects.
               - Published one article that applies the probability theory in physics.  
 projects:
