--- a/_data/data.yml
+++ b/_data/data.yml
@@ -88,7 +88,7 @@ experiences:
               Making strategies to confirm my theoretical predications from my thesis, and writing articles related to Ph.D. project.
               - Developed mathematical methods and implemented them in a software (in Python) for bleeding-edge numerical simulations, leading to several top-tier peer-review publications.
               - Proposed a bleeding-edge experiment to confirm my theoretical predictions, with collaborations of researchers from different domains, and countries.
-              - Organized ETSF correlation team meeting at École Polytechnique, France (+30 participants worldwide)
+              - Organized ETSF correlation team meeting at École Polytechnique, France (+30 participants worldwide).
               - Received 3 invited seminars on my researching projects.
               - Published one article that applies the probability theory in physics.  
 projects:
@@ -98,25 +98,9 @@ projects:
       section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
       Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
     assignments: 
-      - title: Velocity
-        link: "#hook"
+      - title: Cumupy 
+        link: "#https://github.com/mxz2013/CumuPy"
         tagline: "A responsive website template designed to help startups promote, market and sell their products."
-
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
-
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
 
 publications:
     title: Publications
