--- a/_data/data.yml
+++ b/_data/data.yml
@@ -99,7 +99,7 @@ projects:
       Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
     assignments: 
       - title: Cumupy 
-        link: "#https://github.com/mxz2013/CumuPy"
+        link: "https://github.com/mxz2013/CumuPy"
         tagline: "A responsive website template designed to help startups promote, market and sell their products."
 
 publications:
