--- a/_data/data.yml
+++ b/_data/data.yml
@@ -124,7 +124,7 @@ publications:
         link: "https://link.springer.com/article/10.1140%2Fepjb%2Fe2018-90278-2"
         authors: Xavier Gonze, Jianqiang Sky Zhou, Lucia Reining 
         conference: "The European Physical Journal B"
-      - title: Cumulant green’s function calculations of plasmon satellites in bulk sodium Influence of screening and the crystal environment 
+      - title: Cumulant greens function calculations of plasmon satellites in bulk sodium Influence of screening and the crystal environment 
         link: "https://arxiv.org/abs/1708.04313"
         authors: Jianqiang Sky Zhou, Matteo Gatti, J. J. Kas, J. J. Rehr, Lucia Reining 
         conference: "Phys. Rev. B"
