--- a/_data/data.yml
+++ b/_data/data.yml
@@ -120,7 +120,7 @@ publications:
         link: "https://journals.aps.org/prb/abstract/10.1103/PhysRevB.97.155102"
         authors: Francesco Borgatti, J. A. Berger, Denis Céolin, Jianqiang Sky Zhou, Joshua J. Kas, Matteo Guzzo, C. F. McConville, Francesco Offi, Giancarlo Panaccione, Anna Regoutz, David J. Payne, Jean-Pascal Rueff, Oliver Bierwagen, Mark E. White, James S. Speck, Matteo Gatti, and Russell G. Egdell
         conference: "Phys. Rev. B"
-      - title: Variations on the “exact factorization”
+      - title: Variations on the exact factorization
         link: "https://link.springer.com/article/10.1140%2Fepjb%2Fe2018-90278-2"
         authors: Xavier Gonze, Jianqiang Sky Zhou, Lucia Reining 
         conference: "The European Physical Journal B"
