--- a/_data/data.yml
+++ b/_data/data.yml
@@ -115,34 +115,34 @@ publications:
         link: "https://arxiv.org/abs/1811.12217"
         authors: Jianqiang Sky Zhou, Lucia Reining, Alessandro Nicolaou, Azzedine Bendounan, Kari Ruotsalainen, Marco Vanzini, J. J. Kas, J. J. Rehr, Matthias Muntwiler, Vladimir N. Strocov, Fausto Sirotti, Matteo Gatti 
         conference: "Submitted to Phys. Rev. Lett., 2019"
-      - title: Revisiting the origin of satellites in core-level photoemission of transparent conducting oxides The case of n-doped SnO2 
+      - title: Revisiting the origin of satellites in core level photoemission of transparent conducting oxides The case of n doped SnO2 
         link: "https://journals.aps.org/prb/abstract/10.1103/PhysRevB.97.155102"
         authors: Francesco Borgatti, J. A. Berger, Denis Céolin, Jianqiang Sky Zhou, Joshua J. Kas, Matteo Guzzo, C. F. McConville, Francesco Offi, Giancarlo Panaccione, Anna Regoutz, David J. Payne, Jean-Pascal Rueff, Oliver Bierwagen, Mark E. White, James S. Speck, Matteo Gatti, and Russell G. Egdell
-        conference: "Phys. Rev. B"
+        conference: "Phys. Rev. B, 2018"
       - title: Variations on the exact factorization
         link: "https://link.springer.com/article/10.1140%2Fepjb%2Fe2018-90278-2"
         authors: Xavier Gonze, Jianqiang Sky Zhou, Lucia Reining 
-        conference: "The European Physical Journal B"
+        conference: "The European Physical Journal B, 2018"
        - title: Cumulant Greens function calculations of plasmon satellites in bulk sodium influence of screening and the crystal environment
         link: "https://arxiv.org/abs/1708.04313"
         authors: Jianqiang Sky Zhou, Matteo Gatti, J. J. Kas, J. J. Rehr, Lucia Reining 
-        conference: "Phys. Rev. B"
-         - title: "Dynamical effects in electron spectroscopy"
+        conference: "Phys. Rev. B, 2018"
+         - title: Dynamical effects in electron spectroscopy
         link: "https://aip.scitation.org/doi/10.1063/1.4934965"
         authors: Jianqiang Sky Zhou, J. J. Kas, Lorenzo Sponza, Igor Reshetnyak, Matteo Guzzo, Christine Giorgetti, Matteo Gatti, Francesco Sottile, J. J. Rehr, and Lucia Reining
-        conference: "The Journal of Chemical Physics"
+        conference: "The Journal of Chemical Physics, 2015"
         - title: Gamma-ray irradiation effects on distributed-feedback laser diodes
            link: "https://link.springer.com/article/10.1007/s10946-009-9064-3"
            authors: Zhou, Y. P., Chang, G. L., Zhou, J. S., J. Ma, L. Y. Tan
-           conference: "Journal of Russian Laser Research"
+           conference: "Journal of Russian Laser Research, 2009"
         - title: Theory of electron spectroscopy beyond the state-of-the-art an improved description of fermion-plasmon coupling in Green’s function calculations. 
            link: "https://etsf.polytechnique.fr/node/3404."
            authors: Jianqiang Sky Zhou 
-           conference: "PhD thesis"
+           conference: "PhD thesis, 2016"
         - title: Progress of the theoretical description of photoemission in small systems a model study
            link: "https://etsf.polytechnique.fr/node/3216"
            authors: Jianqiang Sky Zhou 
-           conference: "Master thesis"
+           conference: "Master thesis, 2012"
 
 skills:
     title: Skills &amp; Proficiency
