--- a/_data/data.yml
+++ b/_data/data.yml
@@ -117,6 +117,11 @@ publications:
         authors: Jianqiang Sky Zhou, Lucia Reining, Alessandro Nicolaou, Azzedine Bendounan, Kari Ruotsalainen, Marco Vanzini, J. J. Kas, J. J. Rehr, Matthias Muntwiler, Vladimir N. Strocov, Fausto Sirotti, Matteo Gatti 
         conference: "Submitted to Phys. Rev. Lett. (2019)"
 
+      - title: Revisiting the origin of satellites in core level photoemission of transparent conducting oxides The case of n doped SnO2 
+        link: "https://journals.aps.org/prb/abstract/10.1103/PhysRevB.97.155102"
+        authors: Francesco Borgatti, J. A. Berger, Denis Céolin, Jianqiang Sky Zhou, Joshua J. Kas, Matteo Guzzo, C. F. McConville, Francesco Offi, Giancarlo Panaccione, Anna Regoutz, David J. Payne, Jean-Pascal Rueff, Oliver Bierwagen, Mark E. White, James S. Speck, Matteo Gatti, and Russell G. Egdell
+        conference: "Phys. Rev. B (2018)"
+
 skills:
     title: Skills &amp; Proficiency
 
