--- a/_data/data.yml
+++ b/_data/data.yml
@@ -127,6 +127,11 @@ publications:
         authors: Xavier Gonze, Jianqiang Sky Zhou, Lucia Reining 
         conference: "The European Physical Journal B (2018)"
 
+       - title: Cumulant Greens function calculations of plasmon satellites in bulk sodium influence of screening and the crystal environment
+        link: "https://arxiv.org/abs/1708.04313"
+        authors: Jianqiang Sky Zhou, Matteo Gatti, J. J. Kas, J. J. Rehr, Lucia Reining 
+        conference: "Phys. Rev. B (2018)"
+
 skills:
     title: Skills &amp; Proficiency
 
