--- a/_data/data.yml
+++ b/_data/data.yml
@@ -132,10 +132,14 @@ publications:
         authors: Xavier Gonze, Jianqiang Sky Zhou, Lucia Reining 
         conference: "The European Physical Journal B (2018)"
 
-       - title: Dynamical effects in electron spectroscopy
-        link: "https://aip.scitation.org/doi/10.1063/1.4934965"
-        authors: Jianqiang Sky Zhou, J. J. Kas, Lorenzo Sponza, Igor Reshetnyak, Matteo Guzzo, Christine Giorgetti, Matteo Gatti, Francesco Sottile, J. J. Rehr, and Lucia Reining
-        conference: "The Journal of Chemical Physics (2015)"
+      - title: Variations on the exact factorization
+        link: "https://link.springer.com/article/10.1140%2Fepjb%2Fe2018-90278-2"
+        authors: Xavier Gonze, Jianqiang Sky Zhou, Lucia Reining 
+        conference: "The European Physical Journal B (2018)"
+      - title: Variations on the exact factorization
+        link: "https://link.springer.com/article/10.1140%2Fepjb%2Fe2018-90278-2"
+        authors: Xavier Gonze, Jianqiang Sky Zhou, Lucia Reining 
+        conference: "The European Physical Journal B (2018)"
 skills:
     title: Skills &amp; Proficiency
 
