--- a/_data/data.yml
+++ b/_data/data.yml
@@ -132,10 +132,10 @@ publications:
         authors: Jianqiang Sky Zhou, J. J. Kas, Lorenzo Sponza, Igor Reshetnyak, Matteo Guzzo, Christ    ine Giorgetti, Matteo Gatti, Francesco Sottile, J. J. Rehr, and Lucia Reining 
         conference: "The Journal of Chemical Physics (2015)"
 
-      - title: Variations on the exact factorization
-        link: "https://link.springer.com/article/10.1140%2Fepjb%2Fe2018-90278-2"
-        authors: Xavier Gonze, Jianqiang Sky Zhou, Lucia Reining 
-        conference: "The European Physical Journal B (2018)"
+      - title: Cumulant Greens function calculations of plasmon satellites in bulk sodium influence     of screening and the crystal environment 
+        link: "https://arxiv.org/abs/1708.04313"
+        authors: Jianqiang Sky Zhou, Matteo Gatti, J. J. Kas, J. J. Rehr, Lucia Reining 
+        conference: "Phys. Rev. B (2018)"
       - title: Variations on the exact factorization
         link: "https://link.springer.com/article/10.1140%2Fepjb%2Fe2018-90278-2"
         authors: Xavier Gonze, Jianqiang Sky Zhou, Lucia Reining 
