--- a/_data/data.yml
+++ b/_data/data.yml
@@ -117,6 +117,11 @@ publications:
         authors: Jianqiang Sky Zhou, Lucia Reining, Alessandro Nicolaou, Azzedine Bendounan, Kari Ruotsalainen, Marco Vanzini, J. J. Kas, J. J. Rehr, Matthias Muntwiler, Vladimir N. Strocov, Fausto Sirotti, Matteo Gatti 
         conference: "Submitted to Phys. Rev. Lett. (2019)"
 
+      - title: Cumulant Greens function calculations of plasmon satellites in bulk sodium influence     of screening and the crystal environment 
+        link: "https://arxiv.org/abs/1708.04313"
+        authors: Jianqiang Sky Zhou, Matteo Gatti, J. J. Kas, J. J. Rehr, Lucia Reining 
+        conference: "Phys. Rev. B (2018)"
+
       - title: Revisiting the origin of satellites in core level photoemission of transparent conducting oxides The case of n doped SnO2 
         link: "https://journals.aps.org/prb/abstract/10.1103/PhysRevB.97.155102"
         authors: Francesco Borgatti, J. A. Berger, Denis Céolin, Jianqiang Sky Zhou, Joshua J. Kas, Matteo Guzzo, C. F. McConville, Francesco Offi, Giancarlo Panaccione, Anna Regoutz, David J. Payne, Jean-Pascal Rueff, Oliver Bierwagen, Mark E. White, James S. Speck, Matteo Gatti, and Russell G. Egdell
@@ -127,19 +132,15 @@ publications:
         authors: Xavier Gonze, Jianqiang Sky Zhou, Lucia Reining 
         conference: "The European Physical Journal B (2018)"
 
+       - title: Theory of electron spectroscopy beyond the state-of-the-art an improved description     of fermion-plasmon coupling in Greens function calculations
+       authors: Jianqiang Sky Zhou
+       conference: "PhD thesis (2016)"
+
       - title: Dynamical effects in electron spectroscopy 
         link: "https://aip.scitation.org/doi/10.1063/1.4934965"
         authors: Jianqiang Sky Zhou, J. J. Kas, Lorenzo Sponza, Igor Reshetnyak, Matteo Guzzo, Christ    ine Giorgetti, Matteo Gatti, Francesco Sottile, J. J. Rehr, and Lucia Reining 
         conference: "The Journal of Chemical Physics (2015)"
 
-      - title: Cumulant Greens function calculations of plasmon satellites in bulk sodium influence     of screening and the crystal environment 
-        link: "https://arxiv.org/abs/1708.04313"
-        authors: Jianqiang Sky Zhou, Matteo Gatti, J. J. Kas, J. J. Rehr, Lucia Reining 
-        conference: "Phys. Rev. B (2018)"
-      - title: Variations on the exact factorization
-        link: "https://link.springer.com/article/10.1140%2Fepjb%2Fe2018-90278-2"
-        authors: Xavier Gonze, Jianqiang Sky Zhou, Lucia Reining 
-        conference: "The European Physical Journal B (2018)"
 skills:
     title: Skills &amp; Proficiency
 
