--- a/_data/data.yml
+++ b/_data/data.yml
@@ -132,7 +132,7 @@ publications:
         authors: Xavier Gonze, Jianqiang Sky Zhou, Lucia Reining 
         conference: "The European Physical Journal B (2018)"
 
-       - title: Theory of electron spectroscopy beyond the state-of-the-art an improved description     of fermion-plasmon coupling in Greens function calculations
+       - title: Theory of electron spectroscopy beyond the state of the art an improved description     of fermion plasmon coupling in Greens function calculations
        authors: Jianqiang Sky Zhou
        conference: "PhD thesis (2016)"
 
