--- a/_data/data.yml
+++ b/_data/data.yml
@@ -133,6 +133,9 @@ publications:
         conference: "The European Physical Journal B (2018)"
 
       - title: Theory of electron spectroscopy beyond the state of the art 
+        link: "https://etsf.polytechnique.fr/node/3404."
+        authors: Jianqiang Sky Zhou
+        conference: "PhD thesis (2016)"
 
       - title: Dynamical effects in electron spectroscopy 
         link: "https://aip.scitation.org/doi/10.1063/1.4934965"
