--- a/_data/data.yml
+++ b/_data/data.yml
@@ -143,6 +143,12 @@ publications:
         conference: "The Journal of Chemical Physics (2015)"
 
 
+      - title: Progress of the theoretical description of photoemission in small systems a model st    udy
+ 
+        link: "https://etsf.polytechnique.fr/node/3216"
+        authors: Jianqiang Sky Zhou
+        conference: "Master thesis (2012)"
+
 
 skills:
     title: Skills &amp; Proficiency
