--- a/_data/data.yml
+++ b/_data/data.yml
@@ -149,6 +149,7 @@ publications:
         authors: Jianqiang Sky Zhou
         conference: "Master thesis (2012)"
 
+      - title: Gamma ray irradiation effects on distributed feedback laser diodes 
 skills:
     title: Skills &amp; Proficiency
 
