--- a/_data/data.yml
+++ b/_data/data.yml
@@ -150,6 +150,7 @@ publications:
         conference: "Master thesis (2012)"
 
       - title: Gamma ray irradiation effects on distributed feedback laser diodes 
+        link: "https://link.springer.com/article/10.1007/s10946-009-9064-3"
 skills:
     title: Skills &amp; Proficiency
 
