--- a/_data/data.yml
+++ b/_data/data.yml
@@ -151,6 +151,8 @@ publications:
 
       - title: Gamma ray irradiation effects on distributed feedback laser diodes 
         link: "https://link.springer.com/article/10.1007/s10946-009-9064-3"
+        authors: Yanping Zhou, Guolong Chang, Jianqiang Sky Zhou, Jing Ma, Linying Tan
+        conference: "Journal of Russian Laser Research (2009)"
 skills:
     title: Skills &amp; Proficiency
 
