--- a/_data/data.yml
+++ b/_data/data.yml
@@ -92,14 +92,6 @@ experiences:
               - Received 3 invited seminars on my researching projects.
               - Published one article that applies the probability theory in physics.  
 
-                #skills:
-                #    title: Skills &amp; Proficiency
-                #
-                #    toolset:
-                #      - name: Python (Numpy, Scipy, Matplotlib, Pandas, scikit-learn) 
-                #
-                #        # level: 90%
-
 projects:
     title: Projects
     intro: >
@@ -168,21 +160,16 @@ skills:
     toolset:
        - name: Python & Numpy & Scipy & Matplotlib & Pandas & scikit-learn
         level: 98%
-
-      - name: Github  
-        level: 98%
-
-      - name: Vi & Jupyter Notebook & Latex
-        level: 90%
-
-      - name: Machine learning & Deep learning 
-        level: 80%
-
-      - name: Probablity & Statistics
-        level: 85%
-
-      - name: Fortran & Bash & SQL
-        level: 70%
+        #      - name: Git & SVN  
+        #        level: 98%
+        #      - name: Vi & Jupyter Notebook & Latex
+        #        level: 90%
+        #      - name: Machine learning & Deep learning 
+        #        level: 80%
+        #      - name: Probablity & Statistics
+        #        level: 85%
+        #      - name: Fortran & Bash & SQL
+        #        level: 70%
 
 footer: >
     Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
