--- a/_data/data.yml
+++ b/_data/data.yml
@@ -158,10 +158,11 @@ skills:
     title: Skills &amp; Proficiency
 
     toolset:
-       - name: Python & Numpy & Scipy & Matplotlib & Pandas & scikit-learn
+       - name: Python
         level: 98%
-        #      - name: Git & SVN  
-        #        level: 98%
+
+      - name: Git & SVN  
+        level: 98%
         #      - name: Vi & Jupyter Notebook & Latex
         #        level: 90%
         #      - name: Machine learning & Deep learning 
