--- a/_data/data.yml
+++ b/_data/data.yml
@@ -161,8 +161,8 @@ skills:
        - name: Python
         level: 98%
 
-      - name: Git & SVN  
-        level: 98%
+       - name: Git 
+         level: 98%
         #      - name: Vi & Jupyter Notebook & Latex
         #        level: 90%
         #      - name: Machine learning & Deep learning 
