--- a/_data/data.yml
+++ b/_data/data.yml
@@ -161,9 +161,10 @@ skills:
 
       - name: Python (Numpy & Scipy & Matplotlib & Pandas & Scikit learn) 
         level: 90%
-            #       - name: Python
-            #        level: 98%
-            #
+      - name: Git & SVN
+      level: 90%
+      - name: Vi & Jupyter Notebook & Latex
+        level: 90%
             #       - name: Git 
             #        level: 98%
         #      - name: Vi & Jupyter Notebook & Latex
