--- a/_data/data.yml
+++ b/_data/data.yml
@@ -164,7 +164,7 @@ skills:
       - name: Git & SVN
         level: 90%
 
-      - name: Vi & Jupyter Notebook
+      - name: Vi & Jupyter Notebook & Latex
         level: 90%
 
             #       - name: Git 
