--- a/_data/data.yml
+++ b/_data/data.yml
@@ -170,6 +170,9 @@ skills:
       - name: Machine learning & Deep learning 
         level: 70%
 
+      - name: Probablity & Statistics 
+        level: 70%
+
             #       - name: Git 
             #        level: 98%
         #      - name: Vi & Jupyter Notebook & Latex
