--- a/_data/data.yml
+++ b/_data/data.yml
@@ -172,6 +172,10 @@ skills:
 
       - name: Probablity & Statistics 
         level: 70%
+      - name: Fortran & Bash & SQL 
+
+        level: 70%
+
 
             #       - name: Git 
             #        level: 98%
