--- a/_data/data.yml
+++ b/_data/data.yml
@@ -90,19 +90,19 @@ experiences:
               - Proposed a bleeding-edge experiment to confirm my theoretical predictions, with collaborations of researchers from different domains, and countries.
               - Organized ETSF correlation team meeting at École Polytechnique, France (+30 participants worldwide).
               - Received 3 invited seminars on my researching projects.
-              - Published one article that applies the probability theory in physics.  
+              - Published one article that applies the probability theory in physics (see publication EPJB2018).  
 
 projects:
     title: Projects
     intro: >
-      You can list your side projects or open source libraries in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
     assignments: 
       - title: Cumupy 
         link: "https://github.com/mxz2013/CumuPy"
         tagline: "An scientific package written in Python to compute the spectral functions in the cumulant expansion approximations."
 
+      - title: Angle resolved photoemission spectra of plasmon satellites in bulk aluminum a benchmark study 
+        link: "https://arxiv.org/abs/1811.12217"
+        tagline: "Main proposer for the ARPES experiment done in the ADRESS beamline of Swiss Light Source. The aim of this experiment was to verify the predictions from my newly derived theoretical method for computing the photoemission spectra. The team work involves collaborations with researchers from different domains and countries."
 publications:
     title: Publications
     intro: |
