--- a/_data/data.yml
+++ b/_data/data.yml
@@ -49,7 +49,7 @@ career-profile:
     summary: |
       Physicist with excellent problem-solving and data analysis skills, 
       who takes pride in applying algorithms to solve real-world business problems.
-      You can find my full CV in <a href="https://www.overleaf.com/read/tvjrznytffgj" target="_blank" rel="nofollow">Jianqiang Sky ZHOU</a>
+      You can find my full CV at <a href="https://www.overleaf.com/read/tvjrznytffgj" target="_blank" rel="nofollow">Jianqiang Sky ZHOU</a>.
 education:
     - degree: Ph.D. in Theoretical Physics 
       university: École Polytechnique
