--- a/_data/data.yml
+++ b/_data/data.yml
@@ -173,7 +173,7 @@ skills:
 
       - name: Probablity & Statistics 
         level: 70%
-      - name: Fortran & Bash & Command Line & SQL 
+      - name: Fortran & Bash command line & SQL 
         level: 70%
 
 
