--- a/_data/data.yml
+++ b/_data/data.yml
@@ -49,7 +49,7 @@ career-profile:
     summary: |
       Physicist with excellent problem-solving and data analysis skills, 
       who takes pride in applying algorithms to solve real-world business problems.
-      You can find my full CV at <a href="https://www.overleaf.com/read/nzbfjtjbmggp" target="_blank" rel="nofollow">Jianqiang Sky ZHOU</a>.
+      You can find my full CV at <a href="https://www.overleaf.com/read/nzbfjtjbmggp" target="_blank" rel="nofollow">Full CV of Jianqiang Sky ZHOU </a> and a short one-page CV at <a href="https://app.enhancv.com/share/aaa43bbd?utm_medium=growth&utm_campaign=share-resume&utm_source=dynamic" target="_blank"  rel="nofollow"> One-page CV of Jianqiang Sky ZHOU</a>.
 education:
     - degree: Ph.D. in Theoretical Physics 
       university: École Polytechnique
